--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=8000
-DATABASE=mongodb+srv://amine:<PASSWORD>@cluster0.khp00a8.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://amine:<PASSWORD>@cluster0.khp00a8.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=QstQlyeiwbfY7V7l
