Signing up Users (JWT - JSON WEB TOKENS)

--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=8000
 DATABASE=mongodb+srv://amine:<PASSWORD>@cluster0.khp00a8.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=QstQlyeiwbfY7V7l
+
+JWT_SECRET=thisSecretShouldHaveAtLest32Characters
+JWT_EXPIRES_IN=30d
