Sending Emails with Nodemailer

--- a/config.env
+++ b/config.env
@@ -5,3 +5,8 @@ DATABASE_PASSWORD=QstQlyeiwbfY7V7l
 
 JWT_SECRET=thisSecretShouldHaveAtLest32Characters
 JWT_EXPIRES_IN=30d
+
+EMAIL_USERNAME=da19061b9d2705
+EMAIL_PASSWORD=ef31bb8703cee6
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
