Sending JWT via Cookie

--- a/config.env
+++ b/config.env
@@ -5,6 +5,7 @@ DATABASE_PASSWORD=QstQlyeiwbfY7V7l
 
 JWT_SECRET=thisSecretShouldHaveAtLest32Characters
 JWT_EXPIRES_IN=30d
+JWT_COOKIE_EXPIRES_IN=30
 
 EMAIL_USERNAME=da19061b9d2705
 EMAIL_PASSWORD=ef31bb8703cee6
