--- a/config.env
+++ b/config.env
@@ -11,3 +11,5 @@ EMAIL_USERNAME=da19061b9d2705
 EMAIL_PASSWORD=ef31bb8703cee6
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=25
+
+EMAIL_FROM=amine@gmail.com
