--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=8000
 DATABASE=mongodb+srv://amine:<PASSWORD>@cluster0.khp00a8.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_PASSWORD=QstQlyeiwbfY7V7l
@@ -13,3 +13,6 @@ EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=25
 
 EMAIL_FROM=amine@gmail.com
+
+SENDGRID_USERNAME=apikey
+SENDGRID_PASSWORD=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
